--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: web3dart
 description: Dart library to connect to Ethereum clients. Allows you to send transactions and build DApps in Dart.
-version: 0.4.1
+version: 0.4.1+1
 author: simolus3 <simolus3@gmail.com>
 homepage: https://github.com/simolus3/web3dart
 
@@ -11,7 +11,7 @@ dependencies:
   pointycastle: "^1.0.0-rc3"
   convert: "^2.0.1"
   meta: "^1.1.2"
-  http: "^0.11.3+16"
+  http: "^0.12.0"
   tuple: "^1.0.1"
   uuid: "^1.0.0"
 
